fix overflow

--- a/src/stylus/components/note.styl
+++ b/src/stylus/components/note.styl
@@ -1,6 +1,6 @@
 .note
     background: $vue-hover
-    border-radius: 5px
+    border-left: 5px solid $vue-green
     color: $background-color
     padding: 20px 20px 20px 40px
     text-align: justify
