--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -9,3 +9,10 @@ body
     line-height: 1.6em
     margin-bottom: 50px
     font-size: 1.1rem
+
+.main-container
+    overflow-x: hidden
+
+@media screen and (min-width: 900px)
+    .main-container
+        padding: 0 60px
